<resources>
    <string name="app_name" translatable="false">FlatIt</string>
    <string name="overview">Overview</string>
    <string name="shopping">Shopping</string>
    <string name="finances">Finances</string>
    <string name="todos">Todos</string>
    <string name="add_item">Add item</string>
    <string name="delete_checked_entries">Delete checked entries</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="decrement_amount">Decrement amount</string>
    <string name="increment_amount">Increment amount</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_unresolved">Mark as unresolved</string>
    <string name="expense">Expense</string>
    <string name="flatmate">Choose flatmate</string>
    <string name="save">Save</string>
    <string name="finances_owes">%1$s owes %2$.2f€</string>
    <string name="finances_gets">%1$s gets %2$.2f€</string>
    <string name="edit">Edit</string>
    <string name="save_expense">Save expense</string>
    <string name="add_expense">Add expense</string>
    <string name="overview_shopping_list_item" translatable="false">%1$dx %2$s</string>
    <string name="newest_items_on_shoppinglist">Newest items on shoppinglist:</string>
    <string name="newest_items_on_todos">Newest items on todos list:</string>
    <string name="expenses"><b>Expenses</b></string>
    <string name="debts"><b>Debts</b></string>
</resources>