<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/overviewFragment"
        android:enabled="true"
        android:icon="@drawable/ic_overview"
        android:title="@string/overview"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/shoppingListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_shopping"
        android:title="@string/shopping"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/financesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_finances"
        android:title="@string/finances"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/todosFragment"
        android:enabled="true"
        android:icon="@drawable/ic_todos"
        android:title="@string/todos"
        app:showAsAction="ifRoom"/>
</menu>