<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_finances"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.finances.FinancesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="20dp"
            android:text="@string/debts" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/summary_debts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp">
            <!--app:cardBackgroundColor="@color/md_theme_dark_onBackground">-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/debts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.finances.FinancesFragment"
                tools:listitem="@layout/item_debt"
                tools:itemCount="3" />

        </com.google.android.material.card.MaterialCardView>

        <View android:id="@+id/tile_divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="20dp"
            android:text="@string/expenses" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.finances.FinancesFragment"
            tools:listitem="@layout/item_expense" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_finances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add"
        app:srcCompat="@drawable/ic_plus" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>